# AI-Business-Cofounder

./: .gitignore  README.md  pyproject.toml
backend/: requirements.txt
backend/app/: config.py  database.py  ingest.py  main.py  models.py  rag.py
frontend/: app.js  auth.js  demo.html  demo.js  index.html  login.html  signup.html  style.css
