[project]
name = "genai-business-cofounder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi[standard]>=0.128.0",
    "langchain>=1.2.7",
    "openai>=2.15.0",
    "pandas>=2.3.3",
    "passlib[bcrypt]>=1.7.4",
    "pymongo>=4.16.0",
    "pypdf>=6.6.1",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "uvicorn>=0.40.0",
]
